<resources>
    <string name="app_name">WeBook</string>
    <string name="Log_in">LOG IN</string>
    <string name="username_hint">Username</string>
    <string name="pwd_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm">Log in</string>
    <string name="ALL">ALL</string>
    <string name="Available">Available</string>
    <string name="Requested">Requested</string>
    <string name="Accepted">Accepted</string>
    <string name="Borrowed">Borrowed</string>
    <string name="Search">Search</string>
    <string name="BOOKS">BOOKS</string>
    <string name="REQUESTS">REQUESTS</string>
    <string name="ME">ME</string>
    <string name="add_book">ADD BOOK</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="book_title">Book Title</string>
    <string name="isbn">ISBN</string>
    <string name="owner">Owner:</string>
    <string name="borrower">Borrower:</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="scan">SCAN</string>
    <string name="confirm1">CONFIRM</string>
    <string name="author">Author</string>
    <string name="requests_list">REQUESTS LIST</string>
    <string name="search_books_users">Search Books/Users</string>
</resources>